--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,gradles
+PillSafe-web/src/main/java/PillSafe/PillSafeweb/tyo.png
