--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 
+# google login
+spring.security.oauth2.client.registration.google.client-id=489133959306-d0a00fl7r8t975945fr5peihttskfjoc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,email,profile
+
+#Mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/PillSafe?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=cyz1886123!
+
+#???? sql ???
+spring.jpa.properties.hibernate.show_sql=true
+#sql ??? ?? ???
+spring.jpa.properties.hibernate.format_sql=true
+#db ??? ??. ?? ??? ?? ? ??
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
