--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#static resource
 
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
