--- a/PillSafe-web/build.gradle
+++ b/PillSafe-web/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.cloud:google-cloud-vision:3.20.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0' // json 파싱에 필요
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
