--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -10,11 +10,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/PillSafe?serverTimezone=Asia/S
 spring.datasource.username=root
 spring.datasource.password=cyz1886123!
 
-#???? sql ???
 spring.jpa.properties.hibernate.show_sql=true
-#sql ??? ?? ???
 spring.jpa.properties.hibernate.format_sql=true
-#db ??? ??. ?? ??? ?? ? ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
