--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # google login
 spring.security.oauth2.client.registration.google.client-id=489133959306-d0a00fl7r8t975945fr5peihttskfjoc.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=https://localhost:8080/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
 
 #Mysql
