--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,4 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,gradles
 *.bin
+PillSafe-web/.gradle/8.2.1/checksums/checksums.lock
