--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
 
-spring.profiles.include=applicationSub.properties
+spring.profiles.include=application-sec.properties
