application-sec.properties 삭제
application.properties 파일을 gitignore에

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,6 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,gradles
 
 #application.properties
-.application-sec.properties
+.application.properties
 
 secret/
