--- a/PillSafe-web/src/main/resources/application.properties
+++ b/PillSafe-web/src/main/resources/application.properties
@@ -12,4 +12,16 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
 
-spring.profiles.include=application-sec.properties
+
+# google login
+spring.security.oauth2.client.registration.google.client-id=489133959306-d0a00fl7r8t975945fr5peihttskfjoc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid,email,profile
+
+
+#Mysql
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/PillSafe?serverTimezone=Asia/Seoul
